kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: homework
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      # nodeSelector:
      #   homework: "true"
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
            initialDelaySeconds: 0
            periodSeconds: 5
          lifecycle:
            preStop:
              exec:
                command: [ "rm", "-f", "/homework/index.html" ]
          volumeMounts:
            - name: hw-pvc
              mountPath: "/homework"
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/
            - name: hw-configmap
              mountPath: /homework/conf
      volumes:
        - name: hw-pvc
          persistentVolumeClaim:
              claimName: hw-pvc
        - name: hw-configmap
          configMap:
            name: hw-configmap
        - name: nginx-conf 
          configMap:
            name: nginx-conf
            items:
            - key: default.conf
              path: default.conf
